2002-05-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* bumped to 0.7.3
	* work on German and Spanish translations

2002-05-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed crash when reference is change and no 
	  commentary modules are present thanks to 
	  Jp Robinson for finding this bug
	* bumped to 0.7.2a
	

2002-04-19  Terry Biggs <tbiggs@users.sourceforge.net>

	* bumped to 0.7.2

2002-04-19  Jorge Chacon <jgchacon@itelgua.com>

	* added Spanish translation

2002-04-11  Victor Porton  <porton@localhost>

	* fixed bug about verses with numbers 0 and -1

2002-04-10  Terry Biggs <tbiggs@users.sourceforge.net>

	* added patch from Daniel Glassey to fix strongs, morph and 
	  footnote button crash.
	* fixed paragraph mark in chapter display

2002-04-09  Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.7.1
	* German translation finished
	* grabled shortcut bar bug fixed


2002-04-02  Terry Biggs <tbiggs@users.sourceforge.net>

	* split sw_gbs.* into sw_gbs.* and gs_gbs.*

2002-04-01  Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed detach interlinear crash when Main Text module
	  is duplicated in interlinear.
	* added use default dictionary choice to preferences dialog
	  for left clicking on a word.

2002-03-30  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed on_link2_clicked from gs_html.c because
	  it was no longer used.
	* added view in viewer and/or Dict/Lex pane option to
	  preferences dialog.
	* added choice for viewer lex modules - you can now view one 
	  module in the viewer and another in the Dict/Lex pane.
	* hopefully fixed the detach interlinear crash.

2002-03-29  Victor Porton  <porton@localhost>

	* added "Make Pointing to Here" item to the bookmarks
	  popup menu

2002-03-28  Terry Biggs <tbiggs@users.sourceforge.net>

	* shortcut bar viewer is made visible when a word is clicked
	  in a Bible text ,Commentary or Book pane.

2002-03-28  Terry Biggs <tbiggs@users.sourceforge.net>
